force-app/main/default/objects/PriceApprovalRequestItem__c/PriceApprovalRequestItem__c.object-meta.xml
<CustomObject>
    <label>Price Approval Request Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Approval Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>