force-app/main/default/objects/PriceApprovalRequestItem__c/fields/BilletCost__c.field-meta.xml
<CustomField>
    <fullName>BilletCost__c</fullName>
    <formula>BilletCost_t__c *  Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billet Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>