force-app/main/default/objects/PriceApprovalRequestItem__c/fields/BilletCost_t__c.field-meta.xml
<CustomField>
    <fullName>BilletCost_t__c</fullName>
    <label>Billet Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>