force-app/main/default/objects/PriceApprovalRequestItem__c/fields/BilletMargin__c.field-meta.xml
<CustomField>
    <fullName>BilletMargin__c</fullName>
    <formula>BilletMargin_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billet Margin (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>