force-app/main/default/objects/PriceApprovalRequestItem__c/fields/BilletMargin_t__c.field-meta.xml
<CustomField>
    <fullName>BilletMargin_t__c</fullName>
    <label>Billet Margin / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>