force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CalculationDate__c.field-meta.xml
<CustomField>
    <fullName>CalculationDate__c</fullName>
    <label>Calculation Date</label>
    <type>Date</type>
</CustomField>