force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>