force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CoatingCost__c.field-meta.xml
<CustomField>
    <fullName>CoatingCost__c</fullName>
    <formula>CoatingCost_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coating Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>