force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CoatingCost_t__c.field-meta.xml
<CustomField>
    <fullName>CoatingCost_t__c</fullName>
    <label>Coating Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>