force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CostsTKB__c.field-meta.xml
<CustomField>
    <fullName>CostsTKB__c</fullName>
    <formula>CostsTKB_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs TKB (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>