force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CostsTKB_t__c.field-meta.xml
<CustomField>
    <fullName>CostsTKB_t__c</fullName>
    <label>Costs TKB / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>