force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>