force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CustomDuty__c.field-meta.xml
<CustomField>
    <fullName>CustomDuty__c</fullName>
    <formula>CustomDuty_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Duty (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>