force-app/main/default/objects/PriceApprovalRequestItem__c/fields/CustomDuty_t__c.field-meta.xml
<CustomField>
    <fullName>CustomDuty_t__c</fullName>
    <label>Custom Duty / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>