force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ExtraCosts__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts__c</fullName>
    <formula>ExtraCosts_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Costs (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>