force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ExtraCosts_t__c.field-meta.xml
<CustomField>
    <fullName>ExtraCosts_t__c</fullName>
    <label>Extra Costs / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>