force-app/main/default/objects/PriceApprovalRequestItem__c/fields/InquiryQuantity__c.field-meta.xml
<CustomField>
    <fullName>InquiryQuantity__c</fullName>
    <label>Quantity (units)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>