force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Liabilities__c</fullName>
    <formula>Liabilities_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liabilities (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>