force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Margin_t__c.field-meta.xml
<CustomField>
    <fullName>Margin_t__c</fullName>
    <label>Margin / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>