force-app/main/default/objects/PriceApprovalRequestItem__c/fields/MarginTKB__c.field-meta.xml
<CustomField>
    <fullName>MarginTKB__c</fullName>
    <formula>MarginTKB_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin TKB (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>