force-app/main/default/objects/PriceApprovalRequestItem__c/fields/MetalPrice_t__c.field-meta.xml
<CustomField>
    <fullName>MetalPrice_t__c</fullName>
    <description>Price of one metric ton of the metal for production (in USD).</description>
    <inlineHelpText>Price of one metric ton of the metal for production (in USD).</inlineHelpText>
    <label>Metal Price / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>