force-app/main/default/objects/PriceApprovalRequestItem__c/fields/NPP__c.field-meta.xml
<CustomField>
    <fullName>NPP__c</fullName>
    <label>NPP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>