force-app/main/default/objects/PriceApprovalRequestItem__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>