force-app/main/default/objects/PriceApprovalRequestItem__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <label>Opportunity Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>