force-app/main/default/objects/PriceApprovalRequestItem__c/fields/OpportunityLineItemITENumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemITENumber__c</fullName>
    <label>Opportunity product ITE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>