force-app/main/default/objects/PriceApprovalRequestItem__c/fields/OppProduct__c.field-meta.xml
<CustomField>
    <fullName>OppProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OppProduct</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>