force-app/main/default/objects/PriceApprovalRequestItem__c/fields/PriceApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequestId__c</fullName>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>