force-app/main/default/objects/PriceApprovalRequestItem__c/fields/PriceEXW_t__c.field-meta.xml
<CustomField>
    <fullName>PriceEXW_t__c</fullName>
    <label>Price EXW / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>