force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>