force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ProductSpecLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Spec Level</label>
    <referenceTo>ProductSpecLevel__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>