force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ProductStandard__c.field-meta.xml
<CustomField>
    <fullName>ProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Standard</label>
    <referenceTo>ProductStandard__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>