force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Quantity_t__c.field-meta.xml
<CustomField>
    <fullName>Quantity_t__c</fullName>
    <label>Quantity (t)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>