force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ROI_Abs__c.field-meta.xml
<CustomField>
    <fullName>ROI_Abs__c</fullName>
    <description>Service auxiliary field for calculating total ROI in the master object.</description>
    <formula>ROI__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI (Absolute)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>