force-app/main/default/objects/PriceApprovalRequestItem__c/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Point</label>
    <referenceTo>ShippingPoint__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>