force-app/main/default/objects/PriceApprovalRequestItem__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>