force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TotalMetalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalMetalPrice__c</fullName>
    <description>Total metal price for production in USD.</description>
    <formula>MetalPrice_t__c  * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total metal price for production in USD.</inlineHelpText>
    <label>Total Metal Price (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>