force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TotalPriceEXW__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceEXW__c</fullName>
    <formula>PriceEXW_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price EXW (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>