force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TransportationCost__c.field-meta.xml
<CustomField>
    <fullName>TransportationCost__c</fullName>
    <description>Transportation cost in USD.</description>
    <formula>TransportationCost_t__c * Quantity_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Transportation cost in USD.</inlineHelpText>
    <label>Transp. Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>