force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TransportationCost_t__c.field-meta.xml
<CustomField>
    <fullName>TransportationCost_t__c</fullName>
    <description>Transportation cost per metric ton in USD.</description>
    <inlineHelpText>Transportation cost per metric ton in USD.</inlineHelpText>
    <label>Transp. Cost / t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>