force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>