force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TubeLengthSize__c.field-meta.xml
<CustomField>
    <fullName>TubeLengthSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>