force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>