force-app/main/default/objects/PriceApprovalRequestItem__c/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Price Approval Request Items</relationshipLabel>
    <relationshipName>Price_Approval_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>