force-app/main/default/objects/PriceApprovalRequestItem__c/fields/Weight_kpm__c.field-meta.xml
<CustomField>
    <fullName>Weight_kpm__c</fullName>
    <label>Weight (kpm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>